<resources>
	<string name="app_name">Check True SDK</string>
	<string name="start_camera_app">Start camera App</string>
	<string name="hello_camera">Hello Camera</string>

	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="qr_scan">QR Scan</string>
	<string name="sent_nearby">sent Nearby</string>
	<string name="shake_it">shake it</string>
	<string name="this_is_nearby_fragment">This is NearBy Fragment</string>
	<string name="on_device_found">On Device found</string>
	<string name="shake_your_phone">Shake your Phone !!</string>
	<string name="try_again">Try again</string>
	<string name="check_in">ลงชื่อเข้างาน</string>
	<string name="check_between">ลงชื่อระหว่างวัน</string>
	<string name="check_out">ลงชื่อออกงาน</string>
	<string name="name_surname">name surname</string>
	<string name="shake_fine">เขย่าเพื่อค้นหาคลัง</string>
	<string name="nearby_fine">ค้นหาคลังรอบตัว</string>
	<string name="history_check">ประวัติการเช็คอิน</string>
	<string name="request_absence">คำขอวันลา</string>
	<string name="generate_qrcode">Generate QRCode</string>
	<string name="shakePhoneText">เขย่าโทรศัพท์ของคุณ</string>
	<string name="nearByFine">ค้นหาโทรศัพท์รอบๆตัวคุณด้วย NearBy</string>
	<string name="finePhone">ค้นหาโทรศัพท์</string>
	<string name="orPressBt">หรือกดปุ่ม</string>
	<string name="scanQr">แสกน QR Code</string>
	<string name="log_out">ออกจากระบบ</string>
	<string name="date_checkin">%1$s , %2$s %3$s</string>
	<string name="full_checkin_text"> ลงชื่อเข้างาน</string>
	<string name="full_checkout_text"> ลงชื่อออกงาน</string>
	<string name="full_check_between_text"> ลงชื่อระหว่างวัน</string>
</resources>
